Fix status font size on mobile

--- a/src/components/Input.sass
+++ b/src/components/Input.sass
@@ -36,6 +36,7 @@
             color: #1B3450
         
     .status
+        font-size: 5vw
         text-transform: uppercase
 
         &::placeholder
